--- a/pkgs/linux-lts-bc250/PKGBUILD
+++ b/pkgs/linux-lts-bc250/PKGBUILD
@@ -1,27 +1,27 @@
-# Maintainer: Tu Nombre <tu@email.com>
+# Maintainer: eabarriosTGC <tu@email.com>
 pkgbase=linux-lts-amd-bc250
-pkgver=6.6.66  # Actualizado a una versión reciente de la rama 6.6
+pkgver=6.6.66  # Versión LTS sólida
 pkgrel=1
-pkgdesc='LTS Linux with amdgpu fixes for the AMD BC-250'
+pkgdesc='LTS Linux Kernel (6.6.x) with amdgpu fixes for AMD BC-250'
 url='https://www.kernel.org'
 arch=(x86_64)
 makedepends=(bc cpio gettext libelf pahole perl python tar xz kmod xmlto coreutils)
 options=('!strip')
 _srcname=linux-$pkgver
 source=(
-  https://cdn.kernel.org/pub/linux/kernel/v${pkgver%%.*}.x/${_srcname}.tar.xz
-  # Asegúrate de tener estos archivos .patch en la misma carpeta
-  0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch
-  0002-skip-simpledrm-if-nvidia-drm.modeset=1-is.patch
-  0003-Default-to-maximum-amount-of-ASLR-bits.patch
-  0004-Revert-drm-amd-display-Remove-wait-while-locked.patch
-  config
+  "https://cdn.kernel.org/pub/linux/kernel/v${pkgver%%.*}.x/${_srcname}.tar.xz"
+  "config"                                                       # Tu archivo local
+  "0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
+  "0002-skip-simpledrm-if-nvidia-drm.modeset=1-is.patch"
+  "0003-Default-to-maximum-amount-of-ASLR-bits.patch"
+  "0004-Revert-drm-amd-display-Remove-wait-while-locked.patch"
 )
-sha256sums=('SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP') # SKIP para evitar errores de checksum manuales
-validpgpkeys=('ABAF11C65A2970B130ABE3C479BE3E4300411886' '647F28654894E3BD457199BE38DBBDC86092693E')
+# Usamos SKIP para todo para evitar errores de hash con tus archivos locales
+sha256sums=('SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP' 'SKIP')
 
 prepare() {
   cd $_srcname
+  
   echo "Setting version..."
   echo "-$pkgrel" > localversion.10-pkgrel
   echo "${pkgbase#linux}" > localversion.20-pkgname
@@ -49,14 +49,14 @@ _package() {
   pkgdesc="The $pkgdesc kernel and modules"
   depends=(coreutils initramfs kmod)
   optdepends=('linux-firmware: firmware images needed for some devices')
-
+  
   cd $_srcname
   local modulesdir="$pkgdir/usr/lib/modules/$(<version)"
-
+  
   echo "Installing boot image..."
   install -Dm644 "$(make -s image_name)" "$modulesdir/vmlinuz"
   echo "$pkgbase" | install -Dm644 /dev/stdin "$modulesdir/pkgbase"
-
+  
   echo "Installing modules..."
   make INSTALL_MOD_PATH="$pkgdir/usr" INSTALL_MOD_STRIP=1 DEPMOD=/doesnt/exist modules_install
   rm "$modulesdir"/build
@@ -65,20 +65,19 @@ _package() {
 _package-headers() {
   pkgdesc="Headers and scripts for building modules for the $pkgdesc kernel"
   depends=(pahole)
-
+  
   cd $_srcname
   local builddir="$pkgdir/usr/lib/modules/$(<version)/build"
-
+  
   echo "Installing build files..."
   install -Dt "$builddir" -m644 .config Makefile Module.symvers System.map localversion.* version vmlinux
   install -Dt "$builddir/kernel" -m644 kernel/Makefile
   install -Dt "$builddir/arch/x86" -m644 arch/x86/Makefile
   cp -t "$builddir" -a scripts include
   cp -t "$builddir/arch/x86" -a arch/x86/include
-
-  # Limpieza básica
+  
   find "$builddir" -name '*.o' -delete
-
+  
   mkdir -p "$pkgdir/usr/src"
   ln -sr "$builddir" "$pkgdir/usr/src/$pkgbase"
 }
